# homework

./: .gitignore  ER diagram.drawio  bucket.txt  database.db  practice.ipynb  test.py  연습.py
Django_HW2/: manage.py  pyproject.toml
Django_HW2/addresses/: models.py  serializers.py  views.py
Django_HW2/boards/: admin.py  models.py
Django_HW2/common/: models.py
Django_HW2/feeds/: admin.py  models.py  serializers.py  views.py
Django_HW2/membership_project/: asgi.py  settings.py  urls.py  wsgi.py
JavaScript_study/1회차/: 02-자바스크립트소개.html  03-동작원리출력해보기.html  04-콘솔출력과자료형.html  05-변수와상수.html  06-문자열prompt.html  07-템플릿리터럴.html  08-undefined외.html  09-DOM소개.html  (+1 more)
Linux/: linux_0113(문제).ipynb
SQL 과제/: 3일차과제.sql  chapter01_06.ipynb
SQL/SQL 강의/: DB기초.sql  (+4 more)
admin_project/: aa.html
membership/: pyproject.toml
membership/membership_project/accounts/: admin.py
membership/membership_project/accounts/migrations/: 0001_initial.py
membership/membership_project/addresses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
membership/membership_project/addresses/migrations/: 0001_initial.py
membership/membership_project/common/: models.py  views.py
membership/membership_project/membership_project/: settings.py  urls.py
oz-backend-flask/: out.sql
ozdjango/: machine_learning.ipynb  manage.py  pyproject.toml
sqlachemy_study/: app.py  database.db  models.py
web_scraping/: CGV.py  coupang.py  melon.py  melon_1.py  naver_1.py  naver_2.py  naver_3.py  naver_4.py  selenium_0.py  selenium_1.py  selenium_2.py  selenium_3.py  selenium_4.py  selenium_5.py
(+189 files in other folders)
